--- a/src/app/dashboard/layout/layout.component.html
+++ b/src/app/dashboard/layout/layout.component.html
@@ -52,7 +52,8 @@
                     <!-- User Account: style can be found in dropdown.less -->
                     <li class="dropdown user user-menu center-block">
                         <a href="#" class="dropdown-toggle username-header" data-toggle="dropdown" aria-expanded="false">
-                            <div style="float:left">userName</div> <div style="float:left" class="d-none d-sm-block d-sm-none d-md-block d-md-none d-lg-block d-lg-none d-xl-block"> - @userFullname</div>
+                            <div style="float:left">userName</div>
+                             <div style="float:left" class="d-none d-sm-block d-sm-none d-md-block d-md-none d-lg-block d-lg-none d-xl-block"> - @userFullname</div>
                         </a>
                         <ul class="dropdown-menu fix-dropdown">
                             <li>
@@ -138,10 +139,7 @@
 
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
-           <!--body
-        
-        
-        -->
+            
         </div>
         <!-- /.content-wrapper -->
         <!-- Control Sidebar -->
@@ -152,7 +150,7 @@
         <!-- Main Footer -->
         <footer class="main-footer">
             
-            <ul id="formatName"><b><font>ITC GROUP THAITUAN</font></b></ul>
+            <ul id="formatName"><b><font>Trần Ninh Phúc</font></b></ul>
         </footer>
     </div>
 
