--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -119,6 +119,7 @@
 </style>
 <script>
     $('#fLogin_cRemember').change(function () {
-        $('#fLogin_cRemember').val($(this).is(':checked') ? "True" : "False");
+        $('#fLogin_cRemember').val(
+            $(this).is(':checked') ? "True" : "False");
     });
 </script>
